fix(dropdown): dropdown value should be black not blue on iOS

--- a/src/components/Dropdown/_dropdown.scss
+++ b/src/components/Dropdown/_dropdown.scss
@@ -7,6 +7,7 @@
     align-items: center;
     background-color: $white-100;
     border: none;
+    color: $black-100;
     display: inline-flex;
     gap: 10px;
     justify-content: center;
